// --- BASE DE DONNÉES LOGISTIQUE BPM ---

// --- ENUMS (cohérence & validation forte) ---

Enum role_membre {
  Admin
  Staff
  Tech
}

Enum statut_equipment {
  Fonctionnel
  En_Panne
  En_Reparation
  Perdu
  Reforme [note: 'Sorti officiellement du parc, conservé pour historique']
}

Enum type_action_scan {
  Scan_Entree
  Scan_Sortie
  Changement_Statut
  Inventaire_Vrac
}

Enum avancement_ticket {
  A_faire
  En_cours
  En_attente_de_piece
  Resolu
}

Enum type_evenement_ticket {
  Commentaire
  Changement_Statut
  Changement_Cout
  Ajout_Photo
  Changement_Assignation
}

Enum type_prestation {
  Interne
  Externe
}

// Les trois premiers états sont DÉRIVÉS du pointage, jamais saisis à la main
// (backend/app/services/prestation_statut.py) : rien de sorti -> Ebauche, une
// partie sortie -> En_preparation, tout le prévu sorti -> En_cours.
// Terminee est terminal : posé par POST /prestations/{id}/cloture, retiré par
// POST /prestations/{id}/reouverture.
Enum statut_prestation {
  Ebauche // construction/ajustement juste après création
  En_preparation
  En_cours
  Terminee
}

Enum statut_allocation {
  Planifie
  Sorti
  Retourne
}

// Choix fait à la clôture d'une prestation pour chaque écart (rapport de clôture).
Enum decision_cloture {
  retourne
  perdu // équipement passé en Perdu, loggé dans son historique
  casse // équipement passé en En_Panne + ticket, loggé dans son historique
  ouvert // laissé en suspens : l'écart reste à régler
}

Table membres {
  id integer [primary key, increment]
  nom varchar
  prenom varchar
  email varchar [unique]
  role role_membre
  mandat integer [note: 'Numero du mandat dans lequel le membre à fait son entrée dans l\'association (ex: 28)']
}

// Etat d'acces local. L'authentification elle-meme est deleguee a authentik
// (OIDC) : aucun secret n'est stocke ici, seulement le droit d'entrer.
Table users_auth {
  membre_id integer [primary key, note: 'FK et PK — un compte par membre']
  last_login timestamp
  is_active boolean [default: true, note: 'Coupe l\'acces sans attendre l\'expiration du token authentik']
}

// Abonnements Web-Push (VAPID) — un par appareil
Table push_subscriptions {
  id integer [primary key, increment]
  membre_id integer
  endpoint varchar
  p256dh varchar
  auth varchar
  created_at timestamp
}

Table categories {
  id integer [primary key, increment]
  nom varchar // ex: 'Lumière', 'Son', 'Structure', 'Câblage'
  description text
}

Table emplacements {
  id integer [primary key, increment]
  nom varchar // ex: 'Étagère A', 'Bac Câbles XLR', 'Dépôt Principal'
  zone_stockage varchar
  parent_id integer [note: 'Self-FK — rangement fixe imbriqué (Dépôt > Étagère A)']
}

Table equipments {
  id integer [primary key, increment]
  barcode_uid varchar(10) [unique, not null, note: 'Contenu du QR Code, format PPP-NNNNNN (CHECK ^[A-Z]{3}-[0-9]{6}$) : trigramme du propriétaire puis id sur 6 chiffres. 10 caractères majuscules — la limite exacte d\'un QR version 1 en correction H, qui est ce qui rend l\'étiquette résistante à l\'usure sans grossir. Stable et réimprimable à l\'identique.']
  nom varchar // ex: 'Lyre Beam 7R', 'Ampli Crown XTi'
  categorie_id integer
  emplacement_id integer
  contenant_id integer [note: 'Self-FK — rangé DANS un autre équipement (flight). Exclusif avec emplacement_id']
  est_contenant boolean [default: false, note: 'Flight/contenant : seul un équipement marqué peut recevoir du contenu']
  statut_actuel statut_equipment
  created_at timestamp
  created_by_membre_id integer
  photo_chemin varchar [note: 'Chemin relatif de la photo de l\'équipement sur le VPS (optionnel), servi par /api/photos']
  archive boolean [note: 'Retiré du parc actif (location rendue, matériel réformé) : conservé pour l\'historique, masqué du Parc par défaut. Archiver un flight cascade sur tout son contenu ; le rangement est conservé pour rester réversible']
}

// Entité dépendante (spécialisation) — n'existe que si l'équipement est une caisse de vrac
// Sa PK est aussi FK vers equipments, ce qui en fait une entité faible au sens MCD
Table equipments_vrac {
  equipment_id integer [primary key, note: 'FK et PK — dépend de equipments']
  quantite_theorique integer [note: 'Nombre théorique d\'unités dans la caisse (ex: 20 câbles XLR)']
}

// Inventaires vrac historisés — qui a constaté quoi, quand (état réel ≠ théorique)
// stock_actuel = quantite_theorique + Σ deltas, mais on garde chaque constat
Table inventaires_vrac {
  id integer [primary key, increment]
  equipment_id integer [note: 'La caisse de vrac concernée']
  membre_id integer
  delta integer [note: 'Variation unitaire constatée (ex: -2). Commutatif pour la sync']
  presta_id integer [note: 'Nullable — contexte de presta si applicable']
  note text
  date timestamp
}

// Lock d'inventaire vrac : une seule session ouverte à la fois par caisse
Table inventory_locks {
  equipment_id integer [primary key, note: 'FK et PK — une caisse = au plus un lock']
  membre_id integer
  acquired_at timestamp
  expires_at timestamp [note: 'TTL 2h, libération auto']
}

// Entité dépendante (spécialisation) — consommables (gaffer, piles, scotch...)
Table equipments_consommable {
  equipment_id integer [primary key, note: 'FK et PK — dépend de equipments']
  stock_actuel integer
  seuil_alerte integer [note: 'Déclenche une alerte visuelle / push sous ce seuil']
  unite varchar [note: 'ex: rouleau, pile, mètre']
}

Table tickets_reparation {
  id integer [primary key, increment]
  uuid_client uuid [unique, note: 'Généré côté client au moment de la déclaration — idempotence sync offline']
  equipment_id integer
  declare_par_membre_id integer
  assigne_membre_id integer
  description_panne text
  avancement avancement_ticket
  cout_estime float
  offline_created_at timestamp [note: 'Heure du téléphone (UTC) — ordre chronologique du replay']
  date_declaration timestamp
  date_resolution timestamp
}

// Photos jointes à un ticket de réparation (preuve de panne avant/après)
// Fichiers stockés sur le filesystem du VPS, servis par nginx
Table photos_panne {
  id integer [primary key, increment]
  ticket_id integer
  membre_id integer
  chemin varchar [note: 'Chemin relatif du fichier sur le VPS']
  created_at timestamp
}

// Fil d'activité d'une réparation (façon issue GitHub)
Table evenements_ticket {
  id integer [primary key, increment]
  ticket_id integer
  membre_id integer
  type type_evenement_ticket
  commentaire text
  valeur_avant varchar [note: 'Max 200 chars']
  valeur_apres varchar [note: 'Max 200 chars']
  created_at timestamp
}

Table logs_scans {
  id integer [primary key, increment]
  uuid_client uuid [unique, note: 'Généré côté client au scan — idempotence sync offline (ON CONFLICT DO NOTHING)']
  equipment_id integer
  membre_id integer
  type_action type_action_scan
  contexte varchar [note: 'Contexte lisible de l\'évènement (nom de presta, nouveau statut…)']
  emplacement_destination_id integer
  offline_created_at timestamp [note: 'Heure du téléphone (UTC) — ordre chronologique du replay, first-write-wins']
  date_scan timestamp
}

// --- SECTION PRESTATIONS & LOCATIONS ---

Table fournisseurs {
  id integer [primary key, increment]
  nom varchar // ex: 'Impact Sonorisation', 'Novelty'
  code varchar(3) [unique, null, note: 'Trigramme préfixant les références du matériel loué ici (ex: NOV). Facultatif : sans lui le matériel prend EXT. BPM, EXT et TST sont réservés.']
  contact varchar
  favori boolean [note: 'Fournisseur prioritaire affiché en accès rapide lors de l\'ajout de matériel loué']
}

// Entité dépendante (spécialisation) — n'existe que si l'équipement est du matériel loué à l'externe
// Sa PK est aussi FK vers equipments, même pattern que equipments_vrac
Table equipments_location {
  equipment_id integer [primary key, note: 'FK et PK — dépend de equipments']
  fournisseur_id integer
  reference_devis varchar [note: 'Référence du devis ou bon de commande fournisseur (ex: BDC-Impact-042)']
}

Table prestations {
  id integer [primary key, increment]
  nom varchar // ex: 'Mariage Dupont', 'Nuketown 2024'
  type type_prestation
  client_nom varchar [note: 'Nullable — uniquement pour les prestas externes']
  date_debut date [note: 'Jour de début de l’événement — temporalité au jour près']
  date_fin date [note: 'Jour de fin — nullable, événement ouvert si absent']
  statut statut_prestation
  responsable_membre_id integer
}

// Table de liaison équipement <-> prestation
// Couvre le stock BPM ET le matériel loué (les deux sont dans equipments)
Table allocations_presta {
  id integer [primary key, increment]
  presta_id integer
  equipment_id integer
  quantite integer [default: 1, note: 'Prévu. Utile pour consommables / vrac alloués en lot']
  quantite_sortie integer [default: 0, note: 'Pointé en sortie (deltas presta_check)']
  quantite_retournee integer [default: 0, note: 'Pointé au retour (deltas presta_check)']
  statut statut_allocation
  decision_cloture decision_cloture [null, note: 'Posé par /cloture ; null hors clôture ou sans écart']
}

// --- RELATIONS (LIENS ENTRE LES TABLES) ---

Ref: equipments.categorie_id > categories.id
Ref: equipments.emplacement_id > emplacements.id
Ref: equipments.contenant_id > equipments.id
Ref: equipments.created_by_membre_id > membres.id
Ref: emplacements.parent_id > emplacements.id

// Relation faible : equipments_vrac dépend totalement de equipments
Ref: equipments_vrac.equipment_id - equipments.id

// Relation faible : equipments_consommable dépend totalement de equipments
Ref: equipments_consommable.equipment_id - equipments.id

// Inventaires vrac : historisation des constats sur une caisse
Ref: inventaires_vrac.equipment_id > equipments_vrac.equipment_id
Ref: inventaires_vrac.membre_id > membres.id
Ref: inventaires_vrac.presta_id > prestations.id

// Lock d'inventaire (relation faible vers la caisse vrac)
Ref: inventory_locks.equipment_id - equipments_vrac.equipment_id
Ref: inventory_locks.membre_id > membres.id

Ref: tickets_reparation.equipment_id > equipments.id
Ref: tickets_reparation.declare_par_membre_id > membres.id
Ref: tickets_reparation.assigne_membre_id > membres.id

// Photos de panne rattachées à un ticket
Ref: photos_panne.ticket_id > tickets_reparation.id
Ref: photos_panne.membre_id > membres.id

// Fil d'activité des réparations
Ref: evenements_ticket.ticket_id > tickets_reparation.id
Ref: evenements_ticket.membre_id > membres.id

Ref: logs_scans.equipment_id > equipments.id
Ref: logs_scans.membre_id > membres.id
Ref: logs_scans.emplacement_destination_id > emplacements.id

// Relation faible : equipments_location dépend totalement de equipments
Ref: equipments_location.equipment_id - equipments.id
Ref: equipments_location.fournisseur_id > fournisseurs.id

Ref: prestations.responsable_membre_id > membres.id

Ref: allocations_presta.presta_id > prestations.id
Ref: allocations_presta.equipment_id > equipments.id

// Identité technique & sécurité
Ref: users_auth.membre_id - membres.id
Ref: push_subscriptions.membre_id > membres.id